--- a/404.html
+++ b/404.html
@@ -1,10 +1,8 @@
 ---
-layout: default
-title: "404: Page not found"
 permalink: /404.html
 ---
 
 <div class="page">
-  <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Sorry, 搵唔到。we've misplaced that URL or it's pointing to something that doesn't exist. <a href="/">Head back home</a> to try finding it again.</p>
+  <h1 class="page-title">Page not found|搵唔到</h1>
+  <p class="lead">Sorry, 搵唔到。呢度无审查，你可能打错地址。 <a href="/">Head back home</a> to try finding it again.</p>
 </div>
